FIX [29]: image stretching on blog feed

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -22,6 +22,7 @@
   .featured-image {
     @extend .position-relative;
     width:100%;
+    height:auto;
     line-height:0;
   }
   }
